This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix unused variable warning introduced by commit r73603.
Type: Stage:
Components: Build Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ocean-city, vshenoy
Priority: normal Keywords: patch

Created on 2009-06-29 13:54 by vshenoy, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
fix_unused_var_jun_29_2009.patch vshenoy, 2009-06-29 13:54 Patch for fixing unused variable warning.
Messages (2)
msg89839 - (view) Author: Vikram U Shenoy (vshenoy) Date: 2009-06-29 13:54
Attach patch fixes an unused variable warning introduced by commit r73603.
msg89855 - (view) Author: Hirokazu Yamamoto (ocean-city) * (Python committer) Date: 2009-06-29 16:00
Fixed in r73686(trunk).
History
Date User Action Args
2022-04-11 14:56:50adminsetgithub: 50617
2009-06-29 16:00:29ocean-citysetstatus: open -> closed

nosy: + ocean-city
messages: + msg89855

resolution: fixed
2009-06-29 13:54:39vshenoycreate