Issue #6368: Fixed unused variable warning on Unix.